--- a/style.css
+++ b/style.css
@@ -1,16 +1,135 @@
+@font-face{
+    font-family: pmzd;
+    src: url("./static/PangMenZhengDaoBiaoTiTi-1.ttf");
+}
 body{
     margin: 0;
     padding:0;
+    font-family: pmzd ,Verdana,Tahoma, sans-serif;
+    color: #2d2d2d;
+    letter-spacing: 1px;
 }
 
 ul,ol{
     margin: 0;
     padding:0;
+    list-style: none;
+}
+.text-cut{
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .main{
-    min-height: 100vh;
+    height: 100vh;
     background: #f44336;
     width: 100%;
     overflow: hidden;
+    position: relative;
+    font-size: 12px;
+    box-sizing: border-box;
+}
+
+.top-info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    padding:10px 14px;
+    box-sizing: border-box;
+    z-index: 9;
+    color: #fff;
+}
+.top-info>.left{
+    text-align: left;
+    width: 50%;
+}
+.top-info>.left>.left-item:not(:last-child),
+.top-info>.right>.right-item:not(:last-child){
+    margin-bottom: 6px;
+}
+/* 用户信息 */
+.top-info>.left>.user{
+    display: flex;
+    align-items: center;
+}
+.top-info>.left>.user .logo{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 2px solid #fff;
+    box-sizing: border-box;
+    margin-right: 6px;
+}
+.top-info>.left>.user .user-info{
+    width: calc(100% - 50px - 6px);
+}
+.top-info>.left>.user .name{
+    margin-bottom: 4px;
+    font-size: 16px;
+}
+.top-info>.left>.user .integral{
+    font-size: 14px;
+}
+.top-info>.right{
+    text-align: right;
+    font-size: 14px;
+}
+
+
+
+/* 附加按钮显示 */
+.attach-view{
+    position: absolute;
+    z-index: 9;
+    top: 100px;
+    left: 14px;
+}
+.attach-view>.attach-item{
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    background: radial-gradient(rgba(255,255,255,.9),rgba(255,255,255,.1));
+    text-align: center;
+    line-height: 40px;
+    box-shadow: 0 0 4px rgba(255,255,255,.8);
+}
+.attach-view>.attach-item:not(:last-child){
+    margin-bottom: 12px;
+}
+
+
+/* 摇骰子内容 */
+.dice-box{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    top: 0;
+    left: 0;
+}
+.dice-box>.zdog-rolldice{
+
+}
+.dice-box>.dice-btn{
+    position: absolute;
+    bottom: 20%;
+    left: 50%;
+    background: #fff;
+    padding:10px 30px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    transform: translateX(-50%);
+    letter-spacing: 2px;
+    box-shadow: 0 3px 1px rgba(255,255,255,.5);
+    transition:box-shadow .3s linear;
+    font-weight: 700;
+    color:red;
+}
+.dice-box>.dice-btn.active{
+    box-shadow: 0 0px 0px rgba(0,0,0,.8);
 }
