--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ ul,ol{
 
 .main{
     height: 100vh;
-    background: #be302e;
+    background: #f5c01a;
     width: 100%;
     overflow: hidden;
     position: relative;
