--- a/style.css
+++ b/style.css
@@ -56,17 +56,27 @@ ul,ol{
     position: fixed;
     width: 100%;
     height: 100%;
-    background: #eee;
+    background: #00324A;
     z-index: 10;
 }
-
+.open-load .content{
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.open-load .banner{
+    width: 90%;
+    margin: auto;
+}
+.open-load .banner img{
+    width: 100%;
+}
 .open-load .progress-box{
     text-align: center;
-    position: absolute;
-    left: 50%;
-    bottom: 15%;
+    margin: 50px auto;
     width: 70%;
-    transform: translateX(-50%);
 }
 
 .open-load .progress-box .progress{
@@ -83,6 +93,7 @@ ul,ol{
 }
 .open-load .progress-box .progress .value{
     position: absolute;
+    border-radius: 50px;
     width:0%;
     height: 100%;
     background: linear-gradient(to left, #2196F3, #03A9F4, #00BCD4);
@@ -97,157 +108,6 @@ ul,ol{
     color: #2196F3;
 }
 
-.top-info{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: absolute;
-    width: 100%;
-    padding:10px 14px;
-    box-sizing: border-box;
-    z-index: 9;
-    color:#e0d808;
-    background: linear-gradient(0deg, rgba(0,0,0,.2), rgba(0,0,0,.8));
-}
-.top-info>.left{
-    text-align: left;
-    width: 50%;
-}
-.top-info>.left>.left-item:not(:last-child),
-.top-info>.right>.right-item:not(:last-child){
-    margin-bottom: 6px;
-}
-/* 用户信息 */
-.top-info>.left>.user{
-    display: flex;
-    align-items: center;
-}
-.top-info>.left>.user .logo{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    overflow: hidden;
-    border: 2px solid #fff59d;
-    box-sizing: border-box;
-    margin-right: 6px;
-}
-.top-info>.left>.user .user-info{
-    width: calc(100% - 50px - 6px);
-}
-.top-info>.left>.user .name{
-    margin-bottom: 4px;
-    font-size: 16px;
-}
-.top-info>.left>.user .integral{
-    font-size: 14px;
-}
-.top-info>.right{
-    text-align: right;
-    font-size: 14px;
-}
-
-/* 附加按钮显示 */
-.attach-view{
-    position: absolute;
-    z-index: 9;
-    top: 100px;
-    right: 14px;
-}
-.attach-view>.attach-item{
-    border-radius: 50%;
-    font-size: 12px;
-    width: 36px;
-    height: 36px;
-    background: radial-gradient(var(--lightColor),var(--midColor));
-    text-align: center;
-    line-height: 36px;
-    box-shadow: 2px 2px 6px rgba(255,255,255,.8) inset;
-    border: 2px solid var(--deepColor);
-    color:var(--btnFontColor);
-}
-.attach-view>.attach-item:not(:last-child){
-    margin-bottom: 12px;
-}
-.attach-view .card{
-    display: none;
-}
-
-/* 放大缩小控件 */
-.zoom-control{
-    position: fixed;
-    z-index: 9;
-    right: 14px;
-    bottom: 50px;
-}
-.zoom-control>li{
-    width: 34px;
-    height: 34px;
-    border-radius: 5px;
-    border: 1px solid var(--lightColor);
-    background:rgba(0,0,0,.5);
-    color:var(--lightColor);
-    text-align: center;
-    box-sizing: border-box;
-    line-height: 34px;
-    font-size: 22px;
-}
-.zoom-control>li.disabled{
-    background:rgba(255,255,255,.5);
-    color: #777;
-    border-color: #777;
-}
-.zoom-control>li:not(:last-child){
-    margin-bottom: 14px;
-}
-
-/* 楼层切换控件 */
-.floot-box{
-    position: fixed;
-    left: 14px;
-    top:100px;
-    z-index: 9;
-}
-.floot-box>.floot-show{
-    width: 34px;
-    height: 34px;
-    border-radius: 5px;
-    border: 1px solid var(--lightColor);
-    background: rgba(0,0,0,.5);
-    color: var(--lightColor);
-    text-align: center;
-    box-sizing: border-box;
-    line-height: 34px;
-    font-size: 16px;
-}
-.floot-box>.floot-content{
-    margin-top: 4px;
-    border-radius: 5px;
-    box-sizing: border-box;
-    height: 0px;
-    transition: height .2s linear;
-    overflow: hidden;
-}
-.floot-box>.floot-content.active{
-    height: 68px;
-}
-.floot-box .floot-item {
-    width: 34px;
-    height: 34px;
-    border-top: 1px solid var(--lightColor);
-    border-left: 1px solid var(--lightColor);
-    border-right: 1px solid var(--lightColor);
-    background: rgba(0,0,0,.5);
-    color:var(--lightColor);
-    text-align: center;
-    box-sizing: border-box;
-    line-height: 34px;
-    font-size: 16px;
-    border-radius: 5px;
-}
-.floot-box .floot-item:last-child{
-    border-bottom: 1px solid var(--lightColor);
-}
-
 /* 摇骰子内容 */
 .dice-box{
     position: absolute;
@@ -256,7 +116,6 @@ ul,ol{
     z-index: 5;
     top: 0;
     left: 0;
-    display: none;
 }
 .dice-box>.dice-btn{
     position: absolute;
@@ -275,376 +134,4 @@ ul,ol{
 }
 .dice-box>.dice-btn.active{
     box-shadow: 0 0px 0px rgba(0,0,0,.8);
-}
-
-/* 规则显示 */
-.prop,.dialog{
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    z-index: 10;
-    display: none;
-    transition: backgroundColor .3s linear;   
-}
-.prop>.prop-box,.dialog>.dialog-box{
-    background: radial-gradient(#ffffff 60%, #d9d9d9);
-    position: absolute;
-    min-height: 80px;
-    max-height: 80vh;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    border-radius: 10px;
-    width: 80%;
-    border: 1px solid rgb(179, 179, 179);
-    box-sizing: border-box;
-    padding:40px 12px 12px;
-    box-shadow: 4px 4px 4px rgba(255,255,255,.4);
-}
-
-.prop>.prop-box .hd{
-    position: absolute;
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-    top: 0;
-    left: 0;
-    font-size: 18px;
-    text-align: center;
-}
-.prop>.prop-box .content{
-    height: 100%;
-    font-size: 14px;
-    color: #545454;
-}
-
-.prop>.prop-box .close,.dialog .close{
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 18px;
-    text-align: center;
-    line-height: 32px;
-    color: #7a7a7a;
-    width: 32px;
-    height: 32px;
-}
-
-/* 弹窗提示 */
-.dialog-box.confirm,.dialog-box.alert{
-    padding-bottom: 50px;
-}
-.dialog-box.confirm .hd,.dialog-box.alert .hd{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    left: 0;
-    font-size: 18px;
-}
-
-.dialog-box.confirm .content,.dialog-box.alert .content{
-    font-size: 15px;
-    padding:10px 10px;
-    box-sizing: border-box;
-    color: #575757;
-    text-align: center;
-}
-
-.dialog-box.confirm .footer,.dialog-box.alert .footer{
-    position: absolute;
-    left: 0;
-    bottom:4px;
-    height: 46px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding:0 20px;
-    box-sizing: border-box;
-}
-.dialog-box.confirm .footer .btn,.dialog-box.alert .footer .btn{
-    width: 100%;
-    text-align: center;
-    font-size: 14px;
-    border-radius: 20px;
-    padding: 6px 10px;
-    box-shadow: 0 -2px 2px rgba(0,0,0,.2) inset;
-}
-.dialog-box.confirm .footer .cc,.dialog-box.alert .footer .cc{
-    background: linear-gradient(to bottom, var(--lightGrey), var(--deepGrey));
-    border: 2px solid var(--lightGrey);
-    color: #efefef;
-}
-.dialog-box.confirm .footer .cf,.dialog-box.alert .footer .cf{
-    background: linear-gradient(to bottom, var(--lightColor), var(--deepColor));
-    border: 2px solid var(--deepColor);
-    color:var(--btnFontColor);
-}
-
-.dialog-box.confirm .footer .btn:not(:last-child){
-    margin-right: 20px;
-}
-
-/* 积分 */
-.dialog-box.integral{
-    padding: 0;
-    background: transparent;
-    border: unset;
-    box-shadow: unset;
-}
-.dialog .dialog-box.integral .content{
-    text-align: center;
-    background: var(--integralDeepBg);
-    position: relative;
-    height: 200px;
-    border-radius: 20px 20px 0 0;
-}
-
-.dialog .dialog-box.integral .content::before,.dialog .dialog-box.integral .content::after{
-    content: '';
-    display: block;
-    height:34%;
-    width: 10%;
-    position: absolute;
-    top: 0;
-    transform: translate(-19%,-44%);
-    right: 0;
-    z-index: 8;
-}
-
-.dialog .dialog-box.integral .content::after{
-    background: #eee;
-    right: 0;
-    border-radius: 50%;
-}
-.dialog .dialog-box.integral .content::before{
-    background: #fff;
-    transform: translate(-65%, -44.4%);
-}
-
-.dialog .dialog-box.integral .content .body{
-    padding: 20px 10px;
-    box-sizing: border-box;
-    background: #fff;
-    width: 76%;
-    position: absolute;
-    height: 115%;
-    left: 12%;
-    border-radius: 40px 0 0 0;
-    bottom: 0;
-}
-.integral .content .gold{
-    width: 50%;
-    margin-bottom: 10px;
-}
-.dialog .dialog-box.integral .content .body::before{
-    right: 0;
-    height: 86.5%;
-    content: '';
-    width: 14%;
-    background:var(--integralDeepBg);
-    display: block;
-    position: absolute;
-    transform: translateX(100%);
-    bottom: 0;
-    z-index: 9;
-    border-radius: 0 10px 0 0;
-}
-.dialog .dialog-box.integral .content .body .title{
-    font-size: 24px;
-}
-.dialog .dialog-box.integral .content .body .value{
-    font-size: 32px;
-    color: #FFC107;
-}
-.dialog .dialog-box.integral .content .body .spec{
-    margin: 20px 0;
-    color: #656565;
-    font-size: 14px;
-}
-.dialog .dialog-box.integral .footer{
-    text-align: center;
-    background: var(--integralLightBg);
-    border: 4px solid var(--integralBorder);
-    border-radius: 0 0 40px 40px;
-    padding: 20px;
-    box-sizing: border-box;
-    position: relative;
-}
-
-.dialog .dialog-box.integral .footer::before,.dialog .dialog-box.integral .footer::after{
-    content: '';
-    display: block;
-    top: 0;
-    background: #fff;
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    border-radius: 50%;
-    left: 50%;
-    transform: translate(-50%,-60%);
-}
-.dialog .dialog-box.integral .footer::before{
-    border: 4px solid var(--integralBorder);
-    border-radius: 50%;
-    transform: translate(-50%,-60%);
-}
-.dialog .dialog-box.integral .footer::after{
-    transform: translate(-50%,-110%);
-    width: 100px;
-}
-.dialog .dialog-box.integral .footer .btn{
-    background: #ffc900;
-    padding: 10px 20px;
-    box-sizing: border-box;
-    border-radius: 20px;
-    color: #fff;
-    font-size: 16px;
-    margin-top: 14px;
-    box-shadow: 0px 2px 2px rgba(0,0,0,.2);
-}
-.dialog .dialog-box.integral .footer .detail{
-    font-size: 14px;
-    color: #dadada;
-}
-
-/* 优惠券 */
-.dialog-box.coupon{
-    text-align: center;
-    color: #fff;
-    padding: 0;
-    box-shadow: unset;
-    background: unset;
-    border: unset;
-    
-}
-.dialog-box.coupon .body{
-    position: relative;
-    background: var(--couponBgDeep);
-    border-radius: 25px;
-}
-.dialog-box.coupon .body::before{
-    content: '';
-    display: table;
-    clear: both;
-}
-.dialog-box.coupon .body .xs{
-    position: absolute;
-    z-index: 9;
-    pointer-events: none;
-}
-.dialog-box.coupon .body .xs-top{
-    left: 0;
-    width: 30%;
-    transform: translate(-12px, -8px);
-}
-
-.dialog-box.coupon .body .xs-bt{
-    right: 0;
-    bottom: 0;
-    width: 70%;
-    transform: translate(12px, 38px);
-}
-
-.dialog-box.coupon .gold-xs{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 120%;
-    transform: translate(-8%, -35%);
-}
-
-.dialog-box.coupon .content{
-    margin: 20px 20px 0 20px;
-    background: #fbd4ac;
-    padding: 20px 20px 0 20px;
-    position: relative;
-    color: var(--couponBgDeep);
-}
-.dialog-box.coupon .content::before{
-    content: '';
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 20px;
-    top: -10px;
-    left: 0;
-    background: radial-gradient( transparent 10px, transparent 10px, var(--couponBgDeep) 10px, var(--couponBgDeep));
-    background-size: 20px 20px;
-    background-position: -12px -12px;
-}
-.dialog-box.coupon .content .cp{
-    background: #fff;
-    border-radius: 5px;
-    border:1px solid #e2ad75;
-    padding: 10px 10px 15px 10px;
-    box-sizing: border-box;
-}
-.dialog-box.coupon .content .cp .contain{
-    padding-bottom: 10px;
-    border-bottom: 1px dashed  #e2ad75;
-}
-.dialog-box.coupon .content .cp .contain .title{
-    font-size: 26px;
-}
-.dialog-box.coupon .content .cp .spec{
-    margin-top: 10px;
-}
-.dialog-box.coupon .footer{
-    background: var(--couponBglight);
-    position: relative;
-    padding: 20px;
-    border-radius: 0 0 25px 25px;
-}
-.dialog-box.coupon .footer::before,.dialog-box.coupon .footer::after{
-    height: 50px;
-    content: '';
-    display: block;
-    background: var(--couponBglight);
-    position: absolute;
-    width: 100%;
-    left: 0;
-    top: 0;
-    transform: translateY(-50%);
-}
-.dialog-box.coupon .footer::before{
-    clip-path: polygon(0 0,100% 50px, 0 50px,0 0);
-}
-.dialog-box.coupon .footer::after{
-    clip-path: polygon(0 50px,100% 0 ,100% 50px,0 50px);
-}
-.dialog-box.coupon .footer .title{
-    font-size: 24px;
-    position: relative;
-    z-index: 9;
-    text-shadow: 2px 2px 2px #b43105;
-}
-.dialog-box.coupon .footer .date{
-    font-size: 14px;
-    margin:10px 0;
-    display: block;
-    color: #f7c882;
-}
-.dialog-box.coupon .footer .submit{
-    background:linear-gradient(to bottom,#ffffff, #fdd9b0) ;
-    color: var(--couponBglight);
-    border-radius: 30px;
-    padding:10px;
-    box-sizing: border-box;
-    font-size: 16px;
-    box-shadow: 0 2px 2px rgba(0,0,0,.3);
-}
-
-/* 地图区域 */
-.map-box{
-    position: relative;
-}
-.map-box>.map{
-    position: absolute;
-    transition: all .1s ease-in-out;
-    top: 0;
-    left: 0;
 }
